src/objects/FieloCMS__Component__c.object
<CustomObject>
    <fields>
        <fullName>AccountCRMMode__c</fullName>
        <description>Person Account: Create a new Person Account related to the member
Standard Account: Create a new Standard CRM Account related to the member
Default Account: The member will be related to an specific default CRM account</description>
        <inlineHelpText>Select the behavior about the CRM account for the registration when the contact doesn&apos;t exist or the contact doesn&apos;t have a related CRM account</inlineHelpText>
        <label>Account CRM Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Person Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defined Account</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AccountOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To create CRM account, it is needed a defined user with role as a owner</description>
        <inlineHelpText>Select the owner of the new CRM account created by the component Register</inlineHelpText>
        <label>Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Components2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCMS__CSSClasses__c</fullName>
        <description>Here will be stored the CSS Classes for the corresponding Component.</description>
        <label>CSS Classes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>FieloCMS__Category__c</referenceTo>
        <relationshipLabel>Components</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Columns__c</fullName>
        <defaultValue>2</defaultValue>
        <description>Columns of the Catalog component in Grid view only</description>
        <inlineHelpText>Set the number of columns for the Grid view only</inlineHelpText>
        <label>Number of Columns</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCMS__ComponentLibrary__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Component Library</label>
        <referenceTo>FieloCMS__ComponentLibrary__c</referenceTo>
        <relationshipLabel>Components</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Content__c</fullName>
        <description>Used on the Content Component to add a free text on the frontend</description>
        <label>Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Delay__c</fullName>
        <defaultValue>2500</defaultValue>
        <description>Used on the Banner Component to set the delay of slider banners</description>
        <inlineHelpText>This is the time that each image will show in the banner type Slider.</inlineHelpText>
        <label>Delay</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Desktop__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If selected, it is rendered for Desktop Device</description>
        <label>Desktop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCMS__DetailComponent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the component that contains the information to show the detail of an item in an accordion/modal.</description>
        <label>Detail component</label>
        <referenceTo>FieloCMS__Component__c</referenceTo>
        <relationshipLabel>List components</relationshipLabel>
        <relationshipName>ListComponentsDetailComponent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCMS__DetailPage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Detail page</label>
        <referenceTo>FieloCMS__Page__c</referenceTo>
        <relationshipLabel>Components (Detail page)</relationshipLabel>
        <relationshipName>ListComponentsDetailPage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCMS__DetailParameter__c</fullName>
        <defaultValue>&apos;id&apos;</defaultValue>
        <description>The name of the parameter that a list will use to send to a detail component</description>
        <label>Detail parameter</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCMS__DetailURL__c</fullName>
        <label>Detail URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCMS__DetailView__c</fullName>
        <description>This field will determine how the detail an item from a list is displayed.</description>
        <label>Detail view</label>
        <picklist>
            <controllingField>FieloCMS__Layout__c</controllingField>
            <picklistValues>
                <fullName>Internal page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accordion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloCMS__FieldSet__c</fullName>
        <label>FieldSet</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloCMS__IsAppMenu__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this field is checked the Navigation will be available in the mobile menu (App Menu or Hamburger Menu)</description>
        <label>Is App Menu</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCMS__LayoutMode__c</fullName>
        <label>Layout Mode</label>
        <picklist>
            <controllingField>FieloCMS__Layout__c</controllingField>
            <picklistValues>
                <fullName>Vertical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Horizontal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Form</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Layout__c</fullName>
        <label>Layout</label>
        <picklist>
            <picklistValues>
                <fullName>Grid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Table</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Menu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>View</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Markup</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Limit__c</fullName>
        <defaultValue>6</defaultValue>
        <inlineHelpText>Set the number of items to show per page</inlineHelpText>
        <label>Items per Page</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Mobile__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If selected, it is rendered for Mobile Device</description>
        <label>Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Navigation__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Navigation</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>FieloCMS__Navigation__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>List</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FieloCMS__Navigation__c</referenceTo>
        <relationshipLabel>Components</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Object__c</fullName>
        <label>Object</label>
        <picklist>
            <picklistValues>
                <fullName>FieloCMS__Post__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FieloCMS__Media__c</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloCMS__OrderBy__c</fullName>
        <description>Used on the Catalogo Component to give to the user the option to order the rewards</description>
        <label>Order By</label>
        <picklist>
            <picklistValues>
                <fullName>Name ASC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Order__c</fullName>
        <defaultValue>0</defaultValue>
        <description>In which order they are placed within the section</description>
        <inlineHelpText>In what order the components are placed within the section.</inlineHelpText>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Page__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; + FieloCMS__Section__r.FieloCMS__Parent__r.FieloCMS__Page__c, FieloCMS__Section__r.FieloCMS__Parent__r.FieloCMS__Page__r.Name, &apos;_self&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Page</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Paging__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Check this option if you want a paging section</inlineHelpText>
        <label>Paging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCMS__ParameterName__c</fullName>
        <defaultValue>&apos;paginatorBinding&apos;</defaultValue>
        <description>This parameter will bind a Filter Component and a List Component. When both values are the same the components will work together.</description>
        <label>Paginator Parameter</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCMS__RecordId__c</fullName>
        <description>This field will be used just in memory, containing temporarily the Id of the record that the detail is going to be shown.</description>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Rows__c</fullName>
        <defaultValue>2</defaultValue>
        <description>Used on the Catalog Component to set the quantity of rows</description>
        <inlineHelpText>Set the number of rows  for the Grid view only</inlineHelpText>
        <label>Number of Rows</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Section__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Section to which the component belongs</description>
        <label>Section</label>
        <referenceTo>FieloCMS__Section__c</referenceTo>
        <relationshipLabel>Components</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Tablet__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If selected, it is rendered for Tablet Device</description>
        <label>Tablet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Tag__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tag</label>
        <referenceTo>FieloCMS__Tag__c</referenceTo>
        <relationshipLabel>Components</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Title__c</fullName>
        <inlineHelpText>If you set a title will appear at the top of the component with the title´s style</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Width__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Component Width</description>
        <label>Width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Component</label>
    <nameField>
        <label>Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Components</pluralLabel>
    <recordTypes>
        <fullName>FieloCMS__List</fullName>
        <active>true</active>
        <description>Record type for component Transactions, Redemptions, Organization Members, Member Selecction, Branches, Badges</description>
        <label>List</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloCMS__Record</fullName>
        <active>true</active>
        <description>Record type for components that work with a single record</description>
        <label>Record</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloCMS__Widget</fullName>
        <active>true</active>
        <label>Widget</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FieloCMS__SiteConsistencyNavigation</fullName>
        <active>true</active>
        <errorConditionFormula>IF( NOT( ISBLANK( FieloCMS__Navigation__c ) ) , FieloCMS__Navigation__r.FieloCMS__Site__c &lt;&gt; FieloCMS__Section__r.FieloCMS__Parent__r.FieloCMS__Page__r.FieloCMS__Site__c , false)</errorConditionFormula>
        <errorDisplayField>FieloCMS__Navigation__c</errorDisplayField>
        <errorMessage>That navigation belongs to another Site. You must create the navigation in this Site before trying to use it</errorMessage>
    </validationRules>
</CustomObject>